Fixing alignment on dropdown item logo

--- a/src/components/TopNav.css
+++ b/src/components/TopNav.css
@@ -176,6 +176,8 @@
 }
 
 .topnav-dropdown .topnav-dropdown-logo {
+  width: 24px;
+  text-align: center;
   font-size: 1.5em;
   color: #ADBBC2;
 }
